DIAC-2805  ho templates added